--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "browser-sync-webpack": "^1.0.1",
     "lodash": "^4.17.11"
   }
 }
